language/move-prover/tests/sources/restrictions.exp
Move prover returns: exiting with boogie generation errors
error: [boogie translator] function or tuple result type not yet supported

    ┌── tests/sources/restrictions.move:10:9 ───
    │
 10 │         define f1(): (num, num) { (1, 2) }
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │

error: [boogie translator] function or tuple result type not yet supported

    ┌── tests/sources/restrictions.move:13:9 ───
    │
 13 │         define f2(): | |num { | | 1 }
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │

error: [boogie translator] Invoke not yet supported

    ┌── tests/sources/restrictions.move:17:13 ───
    │
 17 │             f(1)
    │             ^^^^
    │

error: [boogie translator] `|x|e` (lambda) currently only supported as argument for `all` or `any`

    ┌── tests/sources/restrictions.move:22:21 ───
    │
 22 │             let f = |x| x + 1;
    │                     ^^^^^^^^^
    │

error: [boogie translator] Pack not yet supported

    ┌── tests/sources/restrictions.move:28:13 ───
    │
 28 │             S{f: 1}
    │             ^^^^^^^
    │

error: [boogie translator] Shl not yet supported

    ┌── tests/sources/restrictions.move:33:13 ───
    │
 33 │             8 << 2
    │             ^^^^^^
    │

error: [boogie translator] Shr not yet supported

    ┌── tests/sources/restrictions.move:38:13 ───
    │
 38 │             8 >> 2
    │             ^^^^^^
    │

error: [boogie translator] currently 2nd argument must be a lambda

    ┌── tests/sources/restrictions.move:43:13 ───
    │
 43 │             all(x, p) && any(x, p)
    │             ^^^^^^^^^
    │

error: [boogie translator] currently 2nd argument must be a lambda

    ┌── tests/sources/restrictions.move:43:26 ───
    │
 43 │             all(x, p) && any(x, p)
    │                          ^^^^^^^^^
    │
